--- a/src/posts/published/encapsulation/index.mdx
+++ b/src/posts/published/encapsulation/index.mdx
@@ -3,8 +3,8 @@ date: '2020-12-29'
 slug: 'encapsulation'
 title: 'Encapsulation'
 subtitle: 'or the Primary Purpose of Functions'
-description: 'Typically, functions are written for their reuseability, but I want to convince you that the reason to reach for a function is to encapsulate a concern.'
-excerpt: 'Typically, functions are written for their reuseability, but I want to convince you that the reason to reach for a function is to encapsulate a concern.'
+description: 'Typically, functions are written for their reusability, but I want to convince you that the reason to reach for a function is to encapsulate a concern.'
+excerpt: 'Typically, functions are written for their reusability, but I want to convince you that the reason to reach for a function is to encapsulate a concern.'
 tags: ['JavaScript', 'React', 'Computer Science', 'Refactoring']
 relatedPostsSlugs: []
 ---
